Feature: Performance Profiler, Debug Cheats, and Global Entity Cap
- Zaimplementowano profiler wydajności w czasie rzeczywistym dla wszystkich systemów ECS.
- Dodano flagi debugowania do engine_config.json: showProfiler, invinciblePlayer (God Mode) oraz infiniteAmmo.
- Wprowadzono twardy limit jednostek na mapie (maxGlobalEntities), aby zapobiec przeciążeniu silnika.
- Zrefaktoryzowano EntityFactory, aby priorytetyzował folder coreAssets przy szukaniu definicji encji.
- Przywrócono zbalansowaną logikę fal w WaveSystem po testach obciążeniowych.
- Zaktualizowano listę zadań w tasks.md.