@@ -9,7 +9,9 @@ import com.badlogic.gdx.graphics.g2d.SpriteBatch;
 import com.badlogic.gdx.graphics.glutils.ShapeRenderer;
 import com.badlogic.gdx.utils.viewport.FitViewport;
 import com.badlogic.gdx.utils.viewport.Viewport;
+import pl.shooter.engine.Engine;
 import pl.shooter.engine.assets.AssetService;
+import pl.shooter.engine.config.GameConfig;
 import pl.shooter.engine.ecs.Entity;
 import pl.shooter.engine.ecs.EntityManager;
 import pl.shooter.engine.ecs.GameSystem;
@@ -18,9 +20,10 @@ import pl.shooter.engine.events.EventBus;
 import pl.shooter.engine.events.MessageEvent;
 
 import java.util.List;
+import java.util.Map;
 
 /**
- * Handles the On-Screen Display (HUD).
+ * Handles the On-Screen Display (HUD) and Profiler.
  */
 public class UISystem extends GameSystem {
     private final SpriteBatch batch;
@@ -28,7 +31,9 @@ public class UISystem extends GameSystem {
     private final BitmapFont font;
     private final Viewport viewport;
     private final AssetService assetService;
+    private final GameConfig config;
     private final GlyphLayout layout = new GlyphLayout();
+    private Engine engine;
     private boolean showFps = false;
 
     private String currentMessage = null;
@@ -45,13 +50,16 @@ public class UISystem extends GameSystem {
         this.shapeRenderer = new ShapeRenderer();
         this.font = new BitmapFont();
         this.font.getData().setScale(1.1f);
-        this.viewport = new FitViewport(800, 600);
         this.assetService = assetService;
+        this.config = assetService.getConfig();
+        this.viewport = new FitViewport(config.graphics.width, config.graphics.height);
         
         this.assetService.loadTexture(DEFAULT_ICON);
     }
 
-    public void init(EventBus eventBus) {
+    public void init(Engine engine) {
+        this.engine = engine;
+        EventBus eventBus = engine.getEventBus();
         if (eventBus != null) {
             eventBus.subscribe(MessageEvent.class, event -> {
                 this.currentMessage = event.text;
@@ -74,7 +82,7 @@ public class UISystem extends GameSystem {
             return;
         }
 
-        Entity player = players.get(0);
+        Entity player = players.getFirst();
         HealthComponent health = entityManager.getComponent(player, HealthComponent.class);
         if (health != null && health.isDead) {
             renderGameOver();
@@ -88,6 +96,7 @@ public class UISystem extends GameSystem {
         shapeRenderer.setProjectionMatrix(viewport.getCamera().combined);
         shapeRenderer.begin(ShapeRenderer.ShapeType.Filled);
         renderHUDBackgrounds(health, weapon);
+        if (config.debug.showProfiler) renderProfilerBackground();
         shapeRenderer.end();
 
         // ICONS & TEXT
@@ -97,11 +106,12 @@ public class UISystem extends GameSystem {
         renderHUDText(health, score, weapon);
         if (currentMessage != null) renderMessage();
         if (showFps) renderFps();
+        if (config.debug.showProfiler) renderProfilerText();
         batch.end();
     }
 
     private void renderHUDBackgrounds(HealthComponent health, WeaponComponent weapon) {
-        float hx = 20, hy = 560, hw = 200, hh = 20;
+        float hx = 20, hy = viewport.getWorldHeight() - 40, hw = 200, hh = 20;
         shapeRenderer.setColor(Color.BLACK);
         shapeRenderer.rect(hx - 2, hy - 2, hw + 4, hh + 4);
         shapeRenderer.setColor(Color.DARK_GRAY);
@@ -114,39 +124,67 @@ public class UISystem extends GameSystem {
         }
 
         // Weapon Slot
+        float ww = viewport.getWorldWidth();
         shapeRenderer.setColor(Color.BLACK);
-        shapeRenderer.rect(800 - 84, 16, 68, 68);
+        shapeRenderer.rect(ww - 84, 16, 68, 68);
         shapeRenderer.setColor(Color.DARK_GRAY);
-        shapeRenderer.rect(800 - 80, 20, 60, 60);
+        shapeRenderer.rect(ww - 80, 20, 60, 60);
     }
 
     private void renderHUDText(HealthComponent health, ScoreComponent score, WeaponComponent weapon) {
+        float vh = viewport.getWorldHeight();
+        float vw = viewport.getWorldWidth();
+
         if (health != null) {
             font.setColor(Color.WHITE);
-            font.draw(batch, "HP: " + (int)Math.max(0, health.hp), 25, 577);
+            font.draw(batch, "HP: " + (int)Math.max(0, health.hp), 25, vh - 23);
         }
         if (score != null) {
             font.setColor(Color.YELLOW);
-            font.draw(batch, "SCORE: " + score.score, 350, 580);
+            font.draw(batch, "SCORE: " + score.score, vw / 2 - 50, vh - 20);
             font.setColor(Color.WHITE);
-            font.draw(batch, "WAVE: " + score.wave, 365, 555);
+            font.draw(batch, "WAVE: " + score.wave, vw / 2 - 35, vh - 45);
         }
         if (weapon != null) {
             renderWeaponIcon(weapon);
             font.setColor(Color.CYAN);
             String ammo = weapon.hasInfiniteAmmo ? "INF" : weapon.magazineAmmo + "/" + weapon.currentAmmo;
             layout.setText(font, weapon.type.name());
-            font.draw(batch, weapon.type.name(), 800 - layout.width - 95, 65);
-            font.draw(batch, "[" + ammo + "]", 800 - 155, 40);
+            font.draw(batch, weapon.type.name(), vw - layout.width - 95, 65);
+            font.draw(batch, "[" + ammo + "]", vw - 155, 40);
             
             if (weapon.isReloading) {
                 font.setColor(Color.ORANGE);
-                font.draw(batch, "RELOADING...", 800 - 200, 90);
+                font.draw(batch, "RELOADING...", vw - 200, 90);
             }
         }
     }
 
+    private void renderProfilerBackground() {
+        shapeRenderer.setColor(0, 0, 0, 0.7f);
+        shapeRenderer.rect(10, 50, 250, 400);
+    }
+
+    private void renderProfilerText() {
+        if (engine == null) return;
+        Map<String, Long> data = engine.getPerformanceData();
+        float y = 440;
+        font.getData().setScale(0.8f);
+        font.setColor(Color.GOLD);
+        font.draw(batch, "SYSTEM PERFORMANCE (ms)", 20, y);
+        y -= 20;
+
+        for (Map.Entry<String, Long> entry : data.entrySet()) {
+            double ms = entry.getValue() / 1_000_000.0;
+            font.setColor(ms > 1.0 ? Color.RED : (ms > 0.5 ? Color.YELLOW : Color.WHITE));
+            font.draw(batch, String.format("%s: %.3f", entry.getKey(), ms), 20, y);
+            y -= 15;
+        }
+        font.getData().setScale(1.1f);
+    }
+
     private void renderWeaponIcon(WeaponComponent weapon) {
+        float vw = viewport.getWorldWidth();
         if (lastWeaponType != weapon.type) {
             lastWeaponType = weapon.type;
             String typeName = weapon.type.name().toLowerCase();
@@ -157,7 +195,7 @@ public class UISystem extends GameSystem {
             }
         }
         if (cachedWeaponIcon != null) {
-            batch.draw(cachedWeaponIcon, 800 - 75, 25, 50, 50);
+            batch.draw(cachedWeaponIcon, vw - 75, 25, 50, 50);
         }
     }
 
@@ -166,7 +204,7 @@ public class UISystem extends GameSystem {
         font.setColor(1, 1, 0, alpha);
         font.getData().setScale(1.5f);
         layout.setText(font, currentMessage);
-        font.draw(batch, currentMessage, (800 - layout.width) / 2, 450);
+        font.draw(batch, currentMessage, (viewport.getWorldWidth() - layout.width) / 2, 450);
         font.getData().setScale(1.1f);
     }
 
@@ -180,10 +218,10 @@ public class UISystem extends GameSystem {
         batch.begin();
         font.setColor(Color.RED);
         font.getData().setScale(2.5f);
-        font.draw(batch, "GAME OVER", 260, 350);
+        font.draw(batch, "GAME OVER", viewport.getWorldWidth() / 2 - 140, viewport.getWorldHeight() / 2 + 50);
         font.getData().setScale(1.1f);
         font.setColor(Color.WHITE);
-        font.draw(batch, "PRESS R OR SPACE TO RESTART", 240, 280);
+        font.draw(batch, "PRESS R OR SPACE TO RESTART", viewport.getWorldWidth() / 2 - 160, viewport.getWorldHeight() / 2 - 20);
         batch.end();
     }
 
